# tachyondecay.net-mirror

./: .coveragerc  .gitignore  .pylintrc  CHANGELOG-kara.reviews.md  CHANGELOG-tachyondecay.net.md  LICENSE  Pipfile  README  README.md  config.py  create_app.py  manage.py  pyproject.toml  requirements.txt  run.py  tailwind.config.js
.github/workflows/: main.yml
lemonade_soapbox/: __init__.py  config.py  create_app.py  forms.py  helpers.py  htmlabbrev.py  logging_config.py  search.py
lemonade_soapbox/assets/: site.webmanifest
lemonade_soapbox/assets/css/: admin.css  admin.css.map  main.css  main.css.map  reviews.css  reviews.src.css  tachyondecay.css  tachyondecay.src.css
lemonade_soapbox/assets/css/admin/: admin.css  admin.css.map  basic.css  basic.css.map
lemonade_soapbox/assets/css/reviews/: homepage.css  homepage.css.map  reviews.css  reviews.css.map
lemonade_soapbox/assets/js/: admin.js  editing.js  magic.js  tachyondecay.js
lemonade_soapbox/assets/kara.reviews/: branding.css  branding.css.map  branding.html  branding.scss  site.webmanifest
lemonade_soapbox/assets/sass/: _admin.scss  admin.scss  main.scss
lemonade_soapbox/assets/sass/admin/: _forms.scss  _grid.scss  _helpers.scss  _settings.scss  _typography.scss  admin.scss  basic.scss
lemonade_soapbox/assets/sass/admin/components/: _buttons.scss  _can-toggle.scss  _components.buttons.scss  _components.filter-results.scss  _components.forms.scss  _components.icon-classes.scss  _components.nav.scss  _components.notifications.scss  _components.page.scss  _components.rating-input.scss  _dashboard-card.scss  _form-field.scss  _icon-classes.scss  _notifications.scss  _page-title.scss  _pagination.scss  _postform.scss  _quick-search.scss  _results-grid.scss  _search-filter.scss  _tag-lookup.scss  _tag-manager.scss  _upload-widget.scss
lemonade_soapbox/assets/sass/admin/elements/: _elements.forms.scss  _elements.links.scss  _elements.page.scss
lemonade_soapbox/assets/sass/admin/settings/: _settings.global.scss
lemonade_soapbox/assets/sass/common/: _functions.scss  _icon-map.scss  _sprites.scss
lemonade_soapbox/assets/sass/common/objects/: _objects.forms.scss  _objects.gallery.scss  _objects.grid.scss  _objects.icon.scss  _objects.list-inline-flex.scss  _objects.list-split.scss  _objects.post.scss  _objects.powerbar-nav.scss  _objects.search-box.scss  _objects.site-grid.scss  _objects.text-input.scss  _objects.wrapper.scss
lemonade_soapbox/assets/sass/common/tools/: _tools.aliases.scss  _tools.functions.scss  _tools.icon-map.scss  _tools.sprite.scss
lemonade_soapbox/assets/sass/common/utilities/: _utilities.alignment.scss  _utilities.flex.scss  _utilities.font-sizing.scss  _utilities.headings.scss  _utilities.responsive-hide.scss  _utilities.typography.scss
lemonade_soapbox/assets/sass/frontend/components/: _components.buttons.scss  _components.calendar-nav.scss  _components.colophon.scss  _components.masthead.scss  _components.results.scss  (+3 more)
lemonade_soapbox/assets/sass/reviews/: _forms.scss  _grid.scss  _helpers.scss  _settings.scss  _typography.scss  homepage.scss  reviews.scss
lemonade_soapbox/assets/tb-covid-data/: index.html  script.js  style.css
lemonade_soapbox/models/: __init__.py  posts.py  users.py
lemonade_soapbox/templates/: macros.html
lemonade_soapbox/templates/admin/articles/: revision_history.html
lemonade_soapbox/templates/admin/layouts/: basic.html  master.html  results.html  write.html
lemonade_soapbox/templates/admin/posts/: revision_history.html
lemonade_soapbox/templates/admin/views/: index.html  results.html  search.html  signin.html  tag_manager.html
lemonade_soapbox/templates/blog/articles/: _breakdown.html  _breakdown_old.html  atom.xml  rss.xml
lemonade_soapbox/templates/blog/errors/: 404.html
lemonade_soapbox/templates/blog/layouts/: main.html  master.html
lemonade_soapbox/templates/blog/views/: article_list.html  index.html  single_article.html  tags.html  year_archive.html
lemonade_soapbox/templates/email/: register.html  register.txt  signin.html  signin.txt
lemonade_soapbox/templates/frontend/: 404.html  about.html  changelog.html  editing.html  index.html  macros.html  podcasts.html  reading.html
lemonade_soapbox/templates/frontend/layouts/: main.html  master.html
lemonade_soapbox/templates/reviews/: about.html  atom.xml  changelog.html  index.html  macros.html  rss.xml
lemonade_soapbox/templates/reviews/layouts/: basic.html  main.html
lemonade_soapbox/templates/reviews/views/: all_reviews.html  review_list.html  shelves.html  single_list.html  single_review.html
lemonade_soapbox/views/: admin.py  api.py  blog.py  frontend.py  lists.py  reviews.py
migrations/versions/: 0b7b5aab40f3_add_owner_column_on_list.py  220309e50ea0_initial_migration.py  7b3bba6081ed_add_list_and_listitem_models.py  8f1b897458b7_drop_not_null_constraint_on_review_book_.py  d3d36c1f7ad7_.py
tailwind/: reviews.config.js  tachyondecay.config.js  tailwind.config.js
tests/: __init__.py  conftest.py  factories.py  test_cli.py  test_forms.py  test_helpers.py
tests/models/: test_article.py  test_list.py  test_review.py  test_searchable.py  test_tag.py  test_user.py
tests/views/: test_admin.py  test_api.py  test_blog.py  test_frontend.py  test_reviews.py
(+30 files in other folders)
