[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Kara Babcock", email = "kara@tachyondecay.net"},
]
dependencies = [
    "arrow~=1.2",
    "bcrypt~=3.2",
    "beautifulsoup4~=4.11",
    "diff-match-patch~=20200713.0",
    "email-validator~=1.1",
    "flask~=2.1",
    "flask-login~=0.6",
    "flask-sqlalchemy~=2.5",
    "flask-wtf~=1.0",
    "gunicorn~=20.1",
    "itsdangerous~=2.1",
    "jinja2~=3.1",
    "markdown~=3.3",
    "markupsafe~=2.1",
    "passlib~=1.7",
    "python-slugify~=6.1",
    "sqlalchemy~=1.4",
    "sqlalchemy-utils~=0.38",
    "werkzeug~=2.1",
    "whoosh~=2.7",
    "wtforms~=3.0",
    "wtforms-alchemy~=0.18",
    "wtforms-components~=0.10",
    "python-dotenv~=0.20",
    "psycopg2-binary~=2.9",
    "flask-migrate~=3.1",
    "pillow~=9.1",
]
requires-python = ">=3.8"
license = {text = "N/A"}

[project.urls]
homepage = ""


[project.optional-dependencies]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "coverage~=6.3",
    "factory-boy~=3.2",
    "pytest~=7.1",
    "pylint~=2.13",
]

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true
