[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Kara Babcock", email = "kara@tachyondecay.net"},
]
dependencies = [
    "arrow~=1.3",
    "bcrypt~=4.1",
    "beautifulsoup4~=4.12",
    "diff-match-patch~=20230430.0",
    "email-validator~=2.1",
    "flask~=3.0",
    "flask-login~=0.6",
    "flask-sqlalchemy~=3.1",
    "flask-wtf~=1.2",
    "gunicorn~=21.2",
    "itsdangerous~=2.1",
    "jinja2~=3.1",
    "markdown~=3.5",
    "markupsafe~=2.1",
    "passlib~=1.7",
    "python-slugify~=8.0",
    "sqlalchemy~=2.0",
    "sqlalchemy-utils~=0.41",
    "werkzeug~=3.0",
    "whoosh~=2.7",
    "wtforms~=3.1",
    "wtforms-alchemy~=0.18",
    "wtforms-components~=0.10",
    "python-dotenv~=1.0",
    "psycopg2-binary~=2.9",
    "flask-migrate~=4.0",
    "pillow~=10.1",
]
requires-python = ">=3.10"
license = {text = "N/A"}

[project.urls]
homepage = ""


[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "coverage~=7.4",
    "factory-boy~=3.3",
    "pytest~=7.4",
    "pylint~=3.0",
    "pylint-pytest~=1.1",
]

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[tool.black]
skip-string-normalization = true

[tool.coverage.run]
command_line = "-m pytest tests/"

[tool.coverage.report]
omit = [
    "__pypackages__/*",
    "tests/*",
    "venv/*",
    "/usr/*"
]

[tool.pylint]
load-plugins = "pylint_pytest"

[tool.pylint.messages_control]
disable = [
    "C0415",
    "attribute-defined-outside-init",
    "invalid-name",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-else-return",
    "no-member",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "unnecessary-lambda"
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:'_app_ctx_stack':DeprecationWarning", # Remove after Flask 2.3
]